[tool.poetry]
name = "abcd"
version = "0.6.0"
description = "This is a package which helps to store and share atomistic data."
authors = ["Adam Fekete", "Gabor Csanyi"]
keywords = ["ase", "database", "mongo", "flask", "opensearch"]
readme = "README.md"
homepage = "https://libatoms.github.io/abcd/"
repository = "https://github.com/libatoms/abcd"
documentation = "https://libatoms.github.io/abcd/"

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^7.2"
numpy = "^1.26"
tqdm = "^4.66"
pymongo = "^4.7.3"
matplotlib = "^3.9"
ase = "^3.23"
lark = "^1.1.9"

[tool.poetry.group.dev.dependencies]
mongomock = "^4.1.2"

[tool.poetry.extras]
tests = ["mongomock", "pytest", "pytest-cov"]
mongo = ["pymongo"]
http = ["requests"]
server-api = ["flask"]
server-app = ["flask", "Flask-Nav", "Flask-MongoEngine", "gunicorn", "flask-paginate"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
"abcd" = "abcd.frontends.commandline:main"
